Remove dummy parameter
